--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -52,3 +52,19 @@
     text-decoration: none;
     letter-spacing: -0.2px;
 }
+
+.form {
+    width: 27%;
+    padding: 3rem;
+    border-radius: 15px;
+    background: #e0e0e0;
+    box-shadow: 13px 13px 36px #acacac, -13px -13px 36px #ffffff;
+    margin-top: 2.5rem;
+}
+
+.input-label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.8rem;
+    width: 100%;
+}
