--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 @import url('./vars.css');
 @import url('./elements.css');
+@import url('./modal.css');
 @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@400;600&display=swap');
 
 * {
