--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -6,3 +6,10 @@
     width: 40%;
     background-color: var(--bg-color);
 }
+
+.modal-buttons {
+    width: 60%;
+    display: flex;
+    gap: 1rem;
+    margin-top: 1.8rem;
+}
