--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -1,5 +1,5 @@
 .title {
-    font-size: 2rem;
+    font-size: 2.3rem;
     font-weight: 600;
 }
 
@@ -22,7 +22,7 @@
 .button {
     cursor: pointer;
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     margin-bottom: 0.7rem;
     letter-spacing: 1.2px;
 }
@@ -43,6 +43,7 @@
     width: calc(70% - 2.6rem);
     text-align: center;
     margin-bottom: 1rem;
+    text-transform: capitalize;
 }
 
 .button:hover,
@@ -64,14 +65,12 @@
 
 
 .form,
-.form-task,
 .modal-content {
     padding: 3rem;
     border-radius: 15px;
 }
 
-.form,
-.form-task {
+.form {
     background: var(--bg-color);
     box-shadow: var(--double-shadow);
     margin-top: 2.5rem;
@@ -100,4 +99,29 @@
 .input-error {
     /* border: 1.12px solid var(--red-action); */
     box-shadow: 1px 13px 20px #ae00005c;
+}
+
+@media (max-width:1150px) {
+    .form {
+        width: 60%;
+    }
+}
+
+@media (max-width:600px) {
+    .form {
+        width: 87%;
+    }
+}
+
+@media (max-width:360px) {
+    .form {
+        width: 100%;
+        box-shadow: none;
+        background-color: transparent;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+
 }
