--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -13,3 +13,30 @@
     gap: 1rem;
     margin-top: 1.8rem;
 }
+
+@media (max-width:1000px) {
+    .modal-content {
+        width: 72%;
+    }
+
+}
+
+@media (max-width:600px) {
+    .modal-content {
+        width: 90%;
+    }
+}
+
+@media (max-width:420px) {
+    .modal-content {
+        width: 96%;
+    }
+
+    .modal-buttons {
+        width: 100%;
+    }
+
+    .modal-buttons .button {
+        font-size: 1.4rem;
+    }
+}
