--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -44,6 +44,7 @@
     text-align: center;
     margin-bottom: 1rem;
     text-transform: capitalize;
+    word-break: keep-all;
 }
 
 .button:hover,
